1/7/2007 - jdiamond
=====================

 * Integrated the dhtmlxTabbar project to provide a DHTML tab bar for the view account,
   view server, and settings pages.  As a result, all of the separate template files
   for each of the tabs were combined into one template for each page.

1/5/2007 - jdiamond
=====================

 * (trac #138) Expanded invoice line-item descriptions to include more information such as term length,
               domain name assigned to hosting service, and expire dates for domains.
 * Changed the "Home" menu item to display the name of the company and made all the other menu items a
   child of this item.
 * Made the "Next Billing Date" field editable for all purchase types

12/21/2006 - jdiamond
=====================

 * (trac #131) Added support for an external "Add-to-Cart" link and a "Whois box"
 * (trac #117) Added a "note" field to the order interface
 * (trac #149) Fixed a data-integrity bug caused by the AccountDBO not deleting associated orders before deleting itself
 * (trac #17) Added a remove button to the registered domains and expired domains tables

12/15/2006 - jdiamond
=====================

 * (trac #83) Fixed the "Cannot redeclare class soapclient" error in the ResellerClub module

12/14/2006 - jdiamond
=====================

 * (trac #89) Added support for GUI themes
 * Added a very-primitive "CellPhone" theme

12/12/2006 - jdiamond
=====================

 * (trac #154) Translations are now stored in individual files (in the 'language' folder) rather than one large file

12/11/2006 - jdiamond
=====================

 * (trac #77) Implemented a dynamic tree menu for the left side-bar menu in the manager interface using the dhtmlxTree project

12/9/2006 - jdiamond
=====================

 * Converted the DBConnection class to a singleton and removed the global $DB from the namespace

12/7/2006 - jdiamond
=====================

 * (trac #150) Implemented control panel module support and a basic module for cPanel.