@@ -3642,6 +3642,11 @@
 
     <form name="settings_order_interface" page="settings" method="POST">
       <fields>
+        <field name="title"
+               widget="text"
+               validator="text"
+               max_length="255"
+               description="[ORDER_INTERFACE_PAGE_TITLE]"/>
         <field name="accept_checks"
                widget="checkbox"
                description="[ENABLE_CHECK_MO_PAYMENTS]"
