@@ -1,3 +1,9 @@
+1/8/2007 - jdiamond
+=====================
+
+ * (trac #164) Made the Order Interface's page title a setting and gave it its own
+   tab on the Manager > Administration > Settings page
+
 1/7/2007 - jdiamond
 =====================
 
